# blazegram

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: differ.rs
examples/: admin_bot.rs  conversation_bot.rs  demo_bot.rs  ping_bot.rs  quiz_bot.rs  scheduled_bot.rs  showcase_bot.rs  todo_bot.rs
src/: app.rs  bot_api.rs  broadcast.rs  conversation.rs  ctx.rs  differ.rs  error.rs  executor.rs  file_cache.rs  file_session.rs  form.rs  grammers_adapter.rs  i18n.rs  inline.rs  keyboard.rs  lib.rs  macros.rs  markup.rs  metrics.rs  middleware.rs  mock.rs  pagination.rs  prelude.rs  progressive.rs  rate_limiter.rs  redb_store.rs  redis_store.rs  router.rs  scheduler.rs  screen.rs  serializer.rs  sqlite_store.rs  state.rs  template.rs  testing.rs  types.rs  update_parser.rs
src/adapter/: admin.rs  forum.rs  helpers.rs  media.rs  mod.rs  send.rs  settings.rs  stars.rs
src/types/: chat.rs  content.rs  mod.rs  telegram.rs  update.rs
